--- a/storyboard/storyboard/Base.lproj/Main.storyboard
+++ b/storyboard/storyboard/Base.lproj/Main.storyboard
@@ -20,7 +20,7 @@
                                 <rect key="frame" x="151" y="461" width="111" height="31"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <state key="normal" title="Button"/>
-                                <buttonConfiguration key="configuration" style="plain" title="Do the things"/>
+                                <buttonConfiguration key="configuration" style="plain" title="Run Fizzbuzz"/>
                                 <connections>
                                     <action selector="buttonClick" destination="BYZ-38-t0r" eventType="touchUpInside" id="WwM-QE-1Na"/>
                                 </connections>
