--- a/storyboard/storyboard/View/Main.storyboard
+++ b/storyboard/storyboard/View/Main.storyboard
@@ -98,7 +98,7 @@
                             <inset key="sectionInset" minX="0.0" minY="0.0" maxX="0.0" maxY="0.0"/>
                         </collectionViewFlowLayout>
                         <cells>
-                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="fizzbuzz" id="g2F-Fc-3ZR">
+                            <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" reuseIdentifier="fizzbuzz" id="g2F-Fc-3ZR" customClass="FizzBuzzViewCell" customModule="storyboard" customModuleProvider="target">
                                 <rect key="frame" x="63" y="0.0" width="288" height="392"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <collectionViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" insetsLayoutMarginsFromSafeArea="NO" id="W90-0u-gpe">
@@ -106,7 +106,7 @@
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="xHm-mH-HRw">
-                                            <rect key="frame" x="108" y="186" width="42" height="21"/>
+                                            <rect key="frame" x="8" y="8" width="42" height="21"/>
                                             <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                             <accessibility key="accessibilityConfiguration" identifier="label"/>
                                             <fontDescription key="fontDescription" type="system" pointSize="17"/>
@@ -116,6 +116,9 @@
                                     </subviews>
                                 </collectionViewCellContentView>
                                 <size key="customSize" width="288" height="392"/>
+                                <connections>
+                                    <outlet property="label" destination="xHm-mH-HRw" id="Sfc-NL-vSc"/>
+                                </connections>
                             </collectionViewCell>
                         </cells>
                         <connections>
